--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^15.4.2"
     },
     "dependencies": {
+        "jquery-form": "^4.2.2",
         "react-redux": "^5.0.7",
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
