--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "jquery": "^3.3.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "react": "^15.4.2",
-        "react-dom": "^15.4.2"
+        "react": "^15.6.2",
+        "react-dom": "^15.6.2"
     },
     "dependencies": {
+        "bootstrap": "^4.1.3",
         "jquery-form": "^4.2.2",
         "react-redux": "^5.0.7",
+        "reactstrap": "^6.3.1",
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0"
