--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
+        "bootstrap-select": "^1.13.2",
         "jquery-form": "^4.2.2",
         "react-redux": "^5.0.7",
         "reactstrap": "^6.3.1",
