--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap": "^4.1.3",
         "bootstrap-select": "^1.13.2",
         "jquery-form": "^4.2.2",
+        "moment": "^2.23.0",
         "react-redux": "^5.0.7",
         "reactstrap": "^6.3.1",
         "redux": "^4.0.0",
